# metaloot-eth

./: .gitignore  README.md
ai-town/: bun.lockb  package.json
crazyjumper/: bun.lockb  next.config.ts  package-lock.json  package.json  tailwind.config.ts
crazyjumper/app/: layout.tsx
crazyjumper/app/components/: Game.tsx
crazyjumper/src-tauri/: Cargo.toml  tauri.conf.json
crazyjumper/src-tauri/capabilities/: default.json
crazyjumper/src-tauri/src/: lib.rs
fcl/: .gitignore  bun.lockb  flow.json
fcl/cadence/contracts/: GameSession.cdc  HelloWorld.cdc  ItemNFTInterface.cdc  MarketPlace.cdc  MetalootNFT.cdc  template.cdc
fcl/cadence/scripts/: ReadActiveSessions.cdc  ReadHistorySessions.cdc
fcl/components/: ContractInterface.tsx
metaloot-landing/: bun.lockb  next.config.ts  package.json
metaloot-landing/app/: page.tsx
metaloot-tauri/: bun.lockb  next.config.mjs  package.json
metaloot-tauri/components/: interface.tsx  types.ts
metaloot-tauri/components/ai/: IronMan.tsx  ThreeComponent.tsx  blueLady.tsx  mainMenu.tsx  playGroundRobot.tsx  robotEve.tsx
metaloot-tauri/components/games/: ai-card.tsx  game-card.tsx  games-panel.tsx
metaloot-tauri/components/inventory/: inventory-card.tsx  inventory-panel.tsx
metaloot-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  routes.rs
src/lib/: api.ts
trophyhunter/: bun.lockb  next.config.ts  package.json  tailwind.config.js
trophyhunter/app/: page.tsx
trophyhunter/src-tauri/: Cargo.toml  tauri.conf.json
(+34 files in other folders)
