[package]
name = "metaloot-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-alpha", features = ["api-all"] }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tokio = { version = "1.0", features = ["full"] } 